[gd_scene load_steps=4 format=3 uid="uid://dexdfrjye1ocu"]

[ext_resource type="Script" path="res://Scripts/monkey_stone.gd" id="1_vvy4f"]
[ext_resource type="Texture2D" uid="uid://d0wymhsvvvy2c" path="res://Assets/Sprites/piedra.png" id="2_o4cbw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_be3y3"]
radius = 5.09902

[node name="MonkeyStone" type="RigidBody2D"]
collision_layer = 8
collision_mask = 3
gravity_scale = 0.5
script = ExtResource("1_vvy4f")

[node name="SpriteStone" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-0.67, -0.54)
texture = ExtResource("2_o4cbw")
region_rect = Rect2(0, -0.951334, 1.9342, 1.95133)

[node name="StoneLife" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_be3y3")

[connection signal="timeout" from="StoneLife" to="." method="_on_stone_cooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
